tests/fail/fail_primitive_narrowing.kr
fn inisiu() {
    nter value = 10;
    u8 byte = value;
}
